--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>Menu Kami</h2>
     <div class="menu-container">
       <div class="menu-card">
-        <img src="img/kopi.jpeg" alt="All Kopi">
+        <img src="img/kpi.jpeg" alt="All Kopi">
         <h3>Kopi Hitam</h3>
         <p>Rp4.000</p>
         <a class="btn" href="https://wa.me/6283821213959?text=Halo%20saya%20mau%20pesan%20Kopi%20dong">Pesan via WA</a>
@@ -54,19 +54,19 @@
         <a class="btn" href="https://wa.me/6283821213959?text=Halo%20saya%20mau%20pesan%20mie rebus">Pesan via WA</a>
       </div>
       <div class="menu-card">
-        <img src="img/es.jpg" alt="Es">
+        <img src="img/s.jpeg" alt="Es">
         <h3>Es</h3>
         <p>Rp1.000- 5.000</p>
         <a class="btn" href="https://wa.me/6283821213959?text=Halo%20saya%20mau%20pesan%20es">Pesan via WA</a>
       </div>
       <div class="menu-card">
-        <img src="img/roko.jpg" alt="Rokok">
+        <img src="img/r.jpeg" alt="Rokok">
         <h3>Rokok</h3>
         <p>Rp1.000- 2.500</p>
         <a class="btn" href="https://wa.me/6283821213959?text=Halo%20saya%20mau%20pesan%20rokok">Pesan via WA</a>
       </div>
       <div class="menu-card">
-        <img src="img/jabur.jpeg" alt="Makanan Ringan">
+        <img src="img/m.jpeg" alt="Makanan Ringan">
         <h3>Makanan RIngan</h3>
         <p>Rp500- 3.000</p>
         <a class="btn" href="https://wa.me/6283821213959?text=Halo%20saya%20mau%20pesan%20snack">Pesan via WA</a>
@@ -84,16 +84,16 @@
   <section id="album" class="section scroll-animate">
     <h2>Album Pengunjung</h2>
     <div class="album-container">
-      <img src="img/album1.jpg" alt="Suasana Warkop">
-      <img src="img/album2.jpg" alt="Pengunjung Ngopi">
+      <img src="img/p1.jpeg" alt="Suasana Warkop">
+      <img src="img/p2.jpeg" alt="Pengunjung Ngopi">
     </div>
   </section>
 
   <!-- Footer -->
   <footer id="kontak">
-    <p>Email: <a href="mailto:birulyangmalang@gmail.com">warkopkeren@gmail.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/irulbirul/" target="_blank">@warkopkeren</a></p>
-    <p>© Warkop Neng Iteung</p>
+    <p>Email: <a href="mailto:birulyangmalang@gmail.com">birulyangmalang@gmail.com</a></p>
+    <p>Instagram: <a href="https://instagram.com/irulbirul/" target="_blank">@irulbirul</a></p>
+    <p>© Warkop Neng Iteung 2025</p>
   </footer>
 </body>
 </html>
